--- a/index.html
+++ b/index.html
@@ -1,7 +1,427 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset=utf-8>
+	<title>9C859639-41C8-4EF1-9669-0DDFC2573A99</title>
+	<style>
+		body {
+			margin: 0;
+		}
+
+		canvas {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+
+	<script src="https://threejs.org/build/three.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script src="gl-matrix.js"></script>
+	<script src="glExample1.js"></script>
+	<script src="webgl-utils.js"></script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div id="cube" style="text-align:center"></div>
+	<div id="webgl" style="text-align:center"></div>
+
+	<h3 style="text-align:center">9C859639-41C8-4EF1-9669-0DDFC2573A99</h3>
+	<ul>
+		<li><a href="">prg:trn</a></li>
+		<li><a href="">prg:hou</a></li>
+		<li><a href="">prg:hou.amb</a></li>
+	</ul>
+	<canvas id="glCanvas" width="640" height="480"></canvas>
+	<canvas id="myCanvas" width="640" height="480"></canvas>
+
+	<!-- vertex shader -->
+	<script id="3d-vertex-shader" type="x-shader/x-vertex">
+		uniform mat4 u_worldViewProjection;
+		uniform vec3 u_lightWorldPos;
+		uniform mat4 u_world;
+		uniform mat4 u_viewInverse;
+		uniform mat4 u_worldInverseTranspose;
+
+		attribute vec4 a_position;
+		attribute vec3 a_normal;
+		attribute vec2 a_texcoord;
+
+		varying vec4 v_position;
+		varying vec2 v_texCoord;
+		varying vec3 v_normal;
+		varying vec3 v_surfaceToLight;
+		varying vec3 v_surfaceToView;
+
+		void main() {
+		v_texCoord = a_texcoord;
+		v_position = (u_worldViewProjection * a_position);
+		v_normal = (u_worldInverseTranspose * vec4(a_normal, 0)).xyz;
+		v_surfaceToLight = u_lightWorldPos - (u_world * a_position).xyz;
+		v_surfaceToView = (u_viewInverse[3] - (u_world * a_position)).xyz;
+		gl_Position = v_position;
+		}
+	</script>
+	<!-- fragment shader -->
+	<script id="3d-fragment-shader" type="x-shader/x-fragment">
+		precision mediump float;
+
+		varying vec4 v_position;
+		varying vec2 v_texCoord;
+		varying vec3 v_normal;
+		varying vec3 v_surfaceToLight;
+		varying vec3 v_surfaceToView;
+
+		uniform vec4 u_lightColor;
+		uniform vec4 u_colorMult;
+		uniform sampler2D u_diffuse;
+		uniform vec4 u_specular;
+		uniform float u_shininess;
+		uniform float u_specularFactor;
+
+		vec4 lit(float l ,float h, float m) {
+		return vec4(1.0,
+		abs(l),
+		(l > 0.0) ? pow(max(0.0, h), m) : 0.0,
+		1.0);
+		}
+
+		void main() {
+		vec4 diffuseColor = texture2D(u_diffuse, v_texCoord);
+		vec3 a_normal = normalize(v_normal);
+		vec3 surfaceToLight = normalize(v_surfaceToLight);
+		vec3 surfaceToView = normalize(v_surfaceToView);
+		vec3 halfVector = normalize(surfaceToLight + surfaceToView);
+		vec4 litR = lit(dot(a_normal, surfaceToLight),
+		dot(a_normal, halfVector), u_shininess);
+		vec4 outColor = vec4((
+		u_lightColor * (diffuseColor * litR.y * u_colorMult +
+		u_specular * litR.z * u_specularFactor)).rgb,
+		diffuseColor.a);
+		gl_FragColor = outColor;
+		//  gl_FragColor = vec4(litR.yyy, 1);
+		}
+	</script>
+	<!--
+	for most samples webgl-utils only provides shader compiling/linking and
+	canvas resizing because why clutter the examples with code that's the same in every sample.
+	See http://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
+	and http://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
+	for webgl-utils, m3, m4, and webgl-lessons-ui.
+	-->
+	<script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+	<script src="https://webglfundamentals.org/webgl/resources/primitives.js"></script>
+	<script src="https://webglfundamentals.org/webgl/resources/texture-utils.js"></script>
+	<script src="https://webglfundamentals.org/webgl/resources/chroma.min.js"></script>
+
+
+	
+	<script>
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+			scene.background = new THREE.Color(0xffffff);
+
+			var geometry = new THREE.BoxGeometry( 3, 3, 3 );
+			var material = new THREE.MeshBasicMaterial({ color: 0x000000, wireframe: true });
+			var cube = new THREE.Mesh( geometry, material );
+			scene.add(cube);
+			
+			//var TILE_SIZE = 2;
+			//var geometry = new THREE.CylinderGeometry(1, TILE_SIZE * 3, TILE_SIZE * 3, 4);
+			//var material = new THREE.MeshBasicMaterial({ color: 0x00ffff, wireframe: true });
+			//var cylinder = new THREE.Mesh(geometry, material);
+			//this.scene.add(cylinder);
+
+			camera.position.z = 5;
+
+			var renderer = new THREE.WebGLRenderer();
+			renderer.setSize(window.innerWidth / 9, window.innerHeight/9);
+			$('#cube').html(renderer.domElement);
+
+			function animate() {
+				cube.rotation.x += 0.01;
+				cube.rotation.y += 0.01;
+				//cube.material.color.b = Math.cos(performance.now() / 100);
+				//cube.material.color.g = Math.sin(performance.now() / 50);
+				//cube.material.color.r = Math.cos(performance.now() / 100);
+
+				requestAnimationFrame( animate );
+				renderer.render( scene, camera );
+			}
+
+			animate();
+	</script>
+
+	<script>
+		main();
+
+		function getGLContext(canvas) {
+			const gl = canvas.getContext('webgl');
+			if (!gl) {
+				alert('Unable to initialize WebGL. Your browser or machine may not support it.');
+				return;
+			}
+			return gl;
+		}
+
+		function main() {
+			var canvas = document.querySelector('#glCanvas');
+			const gl = getGLContext(canvas);
+
+			// Vertex shader program
+			const vsSource = `
+				attribute vec4 aVertexPosition;
+				attribute vec4 aVertexColor;
+				uniform mat4 uModelViewMatrix;
+				uniform mat4 uProjectionMatrix;
+				varying lowp vec4 vColor;
+				void main(void) {
+				  gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
+				  vColor = aVertexColor;
+				}
+			  `;
+
+			// Fragment shader program
+			const fsSource = `
+				varying lowp vec4 vColor;
+				void main(void) {
+				  gl_FragColor = vColor;
+				}
+			  `;
+
+			// Initialize a shader program; this is where all the lighting
+			// for the vertices and so forth is established.
+			const shaderProgram = initShaderProgram(gl, vsSource, fsSource);
+
+			// Collect all the info needed to use the shader program.
+			// Look up which attributes our shader program is using
+			// for aVertexPosition, aVevrtexColor and also
+			// look up uniform locations.
+			const programInfo = {
+				program: shaderProgram,
+				attribLocations: {
+					vertexPosition: gl.getAttribLocation(shaderProgram, 'aVertexPosition'),
+					vertexColor: gl.getAttribLocation(shaderProgram, 'aVertexColor'),
+				},
+				uniformLocations: {
+					projectionMatrix: gl.getUniformLocation(shaderProgram, 'uProjectionMatrix'),
+					modelViewMatrix: gl.getUniformLocation(shaderProgram, 'uModelViewMatrix'),
+				},
+			};
+
+			// Here's where we call the routine that builds all the
+			// objects we'll be drawing.
+			const buffers = initBuffers(gl);
+
+			// Draw the scene
+			drawScene(gl, programInfo, buffers);
+		}
+
+		//
+		// initBuffers
+		//
+		// Initialize the buffers we'll need. For this demo, we just
+		// have one object -- a simple two-dimensional square.
+		//
+		function initBuffers(gl) {
+
+			const positionBuffer = gl.createBuffer();
+			gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+
+			const positions = [
+			   1.0, 1.0,
+			  -1.0, 1.0,
+			   1.0, -1.0,
+			  -1.0, -1.0,
+			];
+
+			// Now pass the list of positions into WebGL to build the
+			// shape. We do this by creating a Float32Array from the
+			// JavaScript array, then use it to fill the current buffer.
+
+			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
+
+			var colors = [
+			  1.0, 1.0, 1.0, 1.0,    // white
+			  1.0, 0.0, 0.0, 1.0,    // red
+			  0.0, 1.0, 0.0, 1.0,    // green
+			  0.0, 0.0, 1.0, 1.0,    // blue
+			];
+
+			const colorBuffer = gl.createBuffer();
+			gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
+			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
+
+			return {
+				position: positionBuffer,
+				color: colorBuffer,
+			};
+		}
+
+		//
+		// Draw the scene.
+		//
+		function drawScene(gl, programInfo, buffers) {
+			gl.clearColor(1.0, 1.0, 1.0, 1.0);  // Clear to black, fully opaque
+			gl.clearDepth(1.0);                 // Clear everything
+			gl.enable(gl.DEPTH_TEST);           // Enable depth testing
+			gl.depthFunc(gl.LEQUAL);            // Near things obscure far things
+
+			// Clear the canvas before we start drawing on it.
+
+			gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+			// Create a perspective matrix, a special matrix that is
+			// used to simulate the distortion of perspective in a camera.
+			// Our field of view is 45 degrees, with a width/height
+			// ratio that matches the display size of the canvas
+			// and we only want to see objects between 0.1 units
+			// and 100 units away from the camera.
+
+			const fieldOfView = 45 * Math.PI / 180;   // in radians
+			const aspect = gl.canvas.clientWidth / gl.canvas.clientHeight;
+			const zNear = 0.1;
+			const zFar = 1000.0;
+			const projectionMatrix = mat4.create();
+
+			// note: glmatrix.js always has the first argument
+			// as the destination to receive the result.
+			mat4.perspective(projectionMatrix,
+							 fieldOfView,
+							 aspect,
+							 zNear,
+							 zFar);
+
+			// Set the drawing position to the "identity" point, which is
+			// the center of the scene.
+			const modelViewMatrix = mat4.create();
+
+			// Now move the drawing position a bit to where we want to
+			// start drawing the square.
+
+			mat4.translate(modelViewMatrix,     // destination matrix
+						   modelViewMatrix,     // matrix to translate
+						   [-0.0, 0.0, -6.0]);  // amount to translate
+
+			// Tell WebGL how to pull out the positions from the position
+			// buffer into the vertexPosition attribute
+			{
+				const numComponents = 2;
+				const type = gl.FLOAT;
+				const normalize = false;
+				const stride = 0;
+				const offset = 0;
+				gl.bindBuffer(gl.ARRAY_BUFFER, buffers.position);
+				gl.vertexAttribPointer(
+					programInfo.attribLocations.vertexPosition,
+					numComponents,
+					type,
+					normalize,
+					stride,
+					offset);
+				gl.enableVertexAttribArray(
+					programInfo.attribLocations.vertexPosition);
+			}
+
+			// Tell WebGL how to pull out the colors from the color buffer
+			// into the vertexColor attribute.
+			{
+				const numComponents = 4;
+				const type = gl.FLOAT;
+				const normalize = false;
+				const stride = 0;
+				const offset = 0;
+				gl.bindBuffer(gl.ARRAY_BUFFER, buffers.color);
+				gl.vertexAttribPointer(
+					programInfo.attribLocations.vertexColor,
+					numComponents,
+					type,
+					normalize,
+					stride,
+					offset);
+				gl.enableVertexAttribArray(
+					programInfo.attribLocations.vertexColor);
+			}
+
+			// Tell WebGL to use our program when drawing
+
+			gl.useProgram(programInfo.program);
+
+			// Set the shader uniforms
+
+			gl.uniformMatrix4fv(
+				programInfo.uniformLocations.projectionMatrix,
+				false,
+				projectionMatrix);
+			gl.uniformMatrix4fv(
+				programInfo.uniformLocations.modelViewMatrix,
+				false,
+				modelViewMatrix);
+
+			{
+				const offset = 0;
+				const vertexCount = 4;
+				gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount);
+			}
+		}
+
+		//
+		// Initialize a shader program, so WebGL knows how to draw our data
+		//
+		function initShaderProgram(gl, vsSource, fsSource) {
+			const vertexShader = loadShader(gl, gl.VERTEX_SHADER, vsSource);
+			const fragmentShader = loadShader(gl, gl.FRAGMENT_SHADER, fsSource);
+			const shaderProgram = gl.createProgram();
+			gl.attachShader(shaderProgram, vertexShader);
+			gl.attachShader(shaderProgram, fragmentShader);
+			gl.linkProgram(shaderProgram);
+
+			if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+				alert('Unable to initialize the shader program: ' + gl.getProgramInfoLog(shaderProgram));
+				return null;
+			}
+
+			return shaderProgram;
+		}
+
+		//
+		// creates a shader of the given type, uploads the source and
+		// compiles it.
+		//
+		function loadShader(gl, type, source) {
+			const shader = gl.createShader(type);
+			gl.shaderSource(shader, source);
+			gl.compileShader(shader);
+
+			if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+				alert('An error occurred compiling the shaders: ' + gl.getShaderInfoLog(shader));
+				gl.deleteShader(shader);
+				return null;
+			}
+
+			return shader;
+		}
+	</script>
+
+	<!--<script id="vs" type="x-shader/x-vertex">
+		#version 300 es
+
+		void main() {
+
+		gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+		}
+	</script>
+	<script id="fs" type="x-shader/x-fragment">
+		#version 300 es
+
+		precision highp float;
+		precision highp int;
+		out vec4 out_FragColor;
+
+		void main() {
+
+		out_FragColor = vec4( 1.0 );
+
+		}
+	</script>-->
 </body>
 </html>
